# Advent-of-Code

./: .gitignore  local.py  pyproject.toml
2023/Day 1/: 1-2.py  input.py
2023/Day 2/: 2-1.py  2-2.py
2025/day1/: day_1.py  test.py
2025/day2/: day2.py
2025/day3/: day3.py
2025/day4/: day4.py
Day 2/: input.py
