[project]
name = "Advent-of-Code"
dynamic = ["version"]
authors = [{ name = "k8thekat", email = "Cadwalladerkatelynn@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
description = ""
requires-python = ">=3.12.0"
license = { file = "LICENSE" }
# PyPi Classifiers.
# https://pypi.org/classifiers/
classifiers = []
keywords = [""]
dependencies = [
]

[project.urls]
GitHub = "https://github.com/k8thekat/Advent-of-Code"

[tool.ruff]
target-version = "py312"
line-length = 140
select = ["ALL"]
ignore = [
    "ANN401",
    "ANN201", # Return type missing.
    "D401", # Ignore "Imperative Mood" statement for docstrings.
    "D100", # Docstring at top of script
    "D103", #Docstring on function.
    "ERA001", #Ignore commented out code.
    "FIX002", # Ignore TODO's telling you to "fix them".
    "F401",
    "F402",
    "F403",
    "F405",
    "INP001", # Import `__init__.py`
    "PERF203",
    "PLR",
    "RUF001",
    "RUF002", # The character U+2013 "–" could be confused with the ASCII character U+002d "-", which is more common in source code.
    "RUF009",
    "RUF052", # for filtering "local dummy variable is accessed" eg. - vars using `_`
    "RET503", # Return needed
    "SIM105",
    "TD003", # Ignore TODO's not having a link/url to an issue.
    "T201", # Ignoring Prints.
    "UP007",
    "UP034",
    "UP045", # Type var `Optional[X]` vs `X | None`
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = ["logs/**", "**/.venv/**", "**/.vscode-server/", "/usr/*"]
include = [""]
useLibraryCodeForTypes = true
reportIncompatibleMethodOverride = false

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
